# slapt-src

./: .gitignore  ChangeLog  Makefile.am  README  TODO  autogen.sh  configure.ac  meson.build  meson_options.txt  slack-desc  slack-required  slack-suggests  slapt-src.8  slapt-src.Slackbuild  slapt-src.ru.8  slapt-srcrc
.tx/: config
po/: LINGUAS  POTFILES.in  bg.po  ca.po  cs.po  da.po  de.po  el.po  en.po  eo.po  es.po  es_AR.po  es_ES.po  fr.po  gl_ES.po  he.po  hi_IN.po  hu.po  id.po  it.po  ja.po  lv_LV.po  meson.build  nl.po  no.po  pl.po  pt.po  pt_BR.po  pt_PT.po  ro.po  ru.po  sk.po  sl.po  slapt-src.pot  sv.po  tr.po  uk.po  vi.po  zh_CN.po
src/: Makefile.am  main.c  meson.build  source.c  source.h
t/: clitests.sh  meson.build
